--- a/website/index.html
+++ b/website/index.html
@@ -31,7 +31,7 @@
     <!-- start -->
     <div class="app-structure">
         <div class="layout">
-            
+            <p class="mobile myclock"><span id="clock">5:55</span><sub id="clockmode">am</sub></p>
             <!-- app left side -->
             <!-- start -->
             <div class="app-left-side">
@@ -41,22 +41,22 @@
                         <label>choose the way to inidcate city ..</label>
                         <div style="display: flex;align-items: center;">
                             <label class="radio-con">
-                                <input class="mirror-shap" type="radio" name="input_way" id="check_zipcode"/>
+                                <input class="mirror-shap" type="radio" name="input_way" id="check_zipcode" checked/>
                                 <span class="custom-radio"></span>
                             </label>
-                            <input class="mirror-shap" type="text" name="zipcode" id="zipcode" placeholder="city zip code ..."  disabled/>
+                            <input class="mirror-shap checked" type="text" name="zipcode" id="zip" placeholder="Enter zip code here ..."  />
                         </div>
                         <div style="display: flex;align-items: center;">
                             <label class="radio-con">
-                                <input class="mirror-shap" type="radio" name="input_way" id="check_city" checked/>
+                                <input class="mirror-shap" type="radio" name="input_way" id="check_city" />
                                 <span class="custom-radio"></span>
                             </label>
-                            <input class="mirror-shap checked" type="text" name="city" id="city" placeholder="city name ..." />
+                            <input class="mirror-shap" type="text" name="city" id="city" placeholder="enter city name  here ..." disabled/>
                         </div>
                         <label style="display: block;margin-top: 15px;">Enter your Feeling about weather</label>
-                        <textarea class="mirror-shap" name="feel" id="feel" cols="30" rows="10" placeholder="what do you feel about weather ?"></textarea>
+                        <textarea class="mirror-shap" name="feel" id="feelings" cols="30" rows="10" placeholder="what do you feel about weather ?"></textarea>
                         <div class="btn-con">
-                            <button type="submit">Search</button>
+                            <button type="submit" id="generate">Search</button>
                         </div>
                     </div>
                     
@@ -67,14 +67,10 @@
 
             <!-- app right side -->
             <!-- start -->
-            <div class="app-right-side">
+            <div class="app-right-side" id="updatearea">
 
-                <p><span id="clock"></span><sub id="clockmode"></sub></p>
-
-                <div class="result">
-
-                </div>
-
+                <p class="desktop myclock"><span id="clock"></span><sub id="clockmode"></sub></p>
+                <div id="createArea"></div>
             </div>
             <!-- end -->
 
